Closed
Bug 1645819
Opened 5 years ago
Closed 5 years ago
Fix Ion spew for WebAssembly functions
Categories
(Core :: JavaScript Engine: JIT, defect, P2)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla79
People
(Reporter: wingo, Assigned: wingo)
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
IONFLAGS=all segfaults for wasm functions; the attached patch will fix it.
| Assignee | ||
Comment 1•5 years ago
|
||
CompileInfo::script_ is null for wasm, so avoid calling info.filename()
/ info.line() in that case.
Example backtrace:
js::BaseScript::sourceObject (this=0x0)
js::BaseScript::scriptSource (this=0x0)
js::BaseScript::filename (this=0x0)
js::jit::CompileInfo::filename (this=0x7ffec6422618)
js::jit::DumpMIRExpressions
Pushed by wingo@igalia.com:
https://hg.mozilla.org/integration/autoland/rev/2f0169aaf86a
Fix Ion spew for WebAssembly functions r=lth
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P2
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Comment 4•5 years ago
|
||
Comment on attachment 9156739 [details]
Bug 1645819 - Fix Ion spew for WebAssembly functions
approved for 78.0b8
Attachment #9156739 -
Flags: approval-mozilla-beta+
Comment 5•5 years ago
|
||
| bugherder uplift | ||
status-firefox78:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•