Bug 1645819 - Fix Ion spew for WebAssembly functions r=lth

CompileInfo::script_ is null for wasm, so avoid calling info.filename()
/ info.line() in that case.

Example backtrace:

  js::BaseScript::sourceObject (this=0x0)
  js::BaseScript::scriptSource (this=0x0)
  js::BaseScript::filename (this=0x0)
  js::jit::CompileInfo::filename (this=0x7ffec6422618)
  js::jit::DumpMIRExpressions

Differential Revision: https://phabricator.services.mozilla.com/D79698